--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-VeCom is an open source Vehicle Computer
-The project is based on the deprecated project vescom (https://evolvis.org/projects/vescom/) and is licensensed under Apache license 2.0
+VeCom is an open source Vehicle Computer that was also my bachelors thesis
+
